@@ -5559,6 +5559,9 @@
                             <para>Fixed problem #446361 (build issues on Solaris)</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem #447415 (inability to launch executables)</para>
+                        </listitem>
+                        <listitem>
                             <para>Fixed problem when creating ~/dir</para>
                         </listitem>
                         <listitem>
